Fixed distance between elements
~ The info-card was a bit too far from the title and sub...

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -741,7 +741,7 @@ span {
     .home {
 
         .title-subtitle {
-            margin-bottom: 5em;
+            margin-bottom: 2.5em;
         }
 
         .infocard {
